testing/stage_12/invalid/char_int.c
int main() 
{
	char int a=2;
	return 2;
}